# waves-c

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  tests.c  tests_main.c  vanity.c  waves.c  waves.h
crypto/: waves_crypto.c  waves_crypto.h
src/: CMakeLists.txt  vanity.c
src/crypto/: crypto.h  sha256.h  sha3.h  utils.c  utils.h  waves_crypto.c  waves_crypto.h
src/crypto/base58/: b58.h  base58.c  libbase58.h
src/crypto/base64/: b64.h  base64.c
src/crypto/libcurve25519-donna/: fe.h
src/crypto/libcurve25519-donna/additions/: crypto_additions.h  utility.h  xeddsa.h
src/crypto/libcurve25519-donna/additions/generalized/: gen_crypto_additions.h  gen_eddsa.h  gen_labelset.h  gen_veddsa.h  gen_x.h
src/crypto/transactions/: alias_tx.c  alias_tx.h  burn_tx.c  burn_tx.h  data_tx.c  data_tx.h  exchange_tx.c  exchange_tx.h  invoke_script_tx.c  invoke_script_tx.h  issue_tx.c  issue_tx.h  lease_cancel_tx.c  lease_cancel_tx.h  lease_tx.c  lease_tx.h  mass_transfer_tx.c  mass_transfer_tx.h  order_tx.c  order_tx.h  reissue_tx.c  reissue_tx.h  set_asset_script_tx.c  set_asset_script_tx.h  set_script_tx.c  set_script_tx.h  sponsorship_tx.c  sponsorship_tx.h  transaction_common.c  transaction_common.h  transfer_transaction.c  transfer_transaction.h  transfer_tx.c  transfer_tx.h  tx.c  tx.h  tx_common.c  tx_common.h
test/: CMakeLists.txt  crypto_tests.c  crypto_tests.h  tests.c  tests.h  tests_main.c  tx_tests.h  utils_tests.c  utils_tests.h
test/transactions/: data_tx_tests.c  data_tx_tests.h  transfer_transaction_tests.c  transfer_transaction_tests.h
tests/: tests.c  tests.h
